fix: header z-index

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,6 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 .header {
   padding: 8px;
   position: absolute;
+  z-index: 1;
 
   &__logo {
     content: url('../public/logo.svg');
